# baseplug

./: Cargo.toml
examples/: gain.rs  midi_out_metronome.rs  midi_sine.rs
examples/svf/: main.rs
src/: plugin.rs  wrapper.rs
src/api/vst2/: mod.rs  ui.rs
