[package]
name = "baseplug"
version = "0.1.0"
authors = ["William Light <git@wrl.lhiaudio.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
num-traits = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

vst2-sys = { git = "https://github.com/WeirdConstructor/vst2-sys.git" }
#vst2-sys = { path = "../vst2-sys" }
keyboard-types = { version = "0.5.0", default-features = false }
raw-window-handle = "0.3"

[dev-dependencies.packed_simd]
version = "0.3"
package = "packed_simd_2"

[dependencies.baseplug-derive]
path = "baseplug-derive"

[[example]]
name = "gain"
crate-type = ["cdylib"]

[[example]]
name = "svf"
crate-type = ["cdylib"]

[[example]]
name = "midi_sine"
crate-type = ["cdylib"]

[[example]]
name = "midi_out_metronome"
crate-type = ["cdylib"]
